# constrained_lqr_jax

./: README.md  pyproject.toml
benchmarks/: REFERENCE_COMPARISON.md  bench_cached_solve.py  bench_clqr_reference.py
constrained_lqr_jax/: helpers.py  solver.py  types.py
test/: test.py  test_solver.py  test_structured_dual_recovery_adversarial.py
