[project]
name = "constrained_lqr_jax"
version = "0.0.1"
requires-python = ">= 3.12"
dependencies = [
  "absl-py",
  "jax",
]
authors = [
  {name = "Joao Sousa-Pinto", email = "joaospinto@gmail.com"},
]
description = "Implements the constrained LQR algorithm in JAX."
license = "MIT"

[tool.black]
line-length = 80

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
test = [
    "pytest>=9.0.3",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["constrained_lqr_jax"]
